added the link to github repo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Bhaawna Shashi
-      <a href="#" target="_blank">open sourced on GitHub</a>
+      <a href="https://github.com/bhaawnaBM/World-clock" target="_blank"
+        >open sourced on GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
