added the basic html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <title>World Clock - BS</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a City</option>
+        <option value="">Indianapolis</option>
+        <option value="">Bangalore</option>
+        <option value="">Melbourne</option>
+        <option value="">Dubai</option>
+      </select>
+      <div class="city">
+        <h2>Indianapolis 🇺🇸</h2>
+        <div class="date">Jan 31st 2023</div>
+        <div class="time">4:26:15 pm</div>
+      </div>
+      <div class="city">
+        <h2>Bangalore 🇮🇳</h2>
+        <div class="date">Jan 31st 2023</div>
+        <div class="time">4:26:15 pm</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Bhaawna Shashi
       <a href="https://github.com/bhaawnaBM/World-clock" target="_blank"
