styled the basic css of the contents

--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
         <option value="">Dubai</option>
       </select>
       <div class="city">
-        <h2>Indianapolis 🇺🇸</h2>
-        <div class="date">Jan 31st 2023</div>
-        <div class="time">4:26:15 pm</div>
+        <div>
+          <h2>Indianapolis 🇺🇸</h2>
+          <div class="date">Jan 31st 2023</div>
+        </div>
+        <div class="time">4:26:15 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Bangalore 🇮🇳</h2>
-        <div class="date">Jan 31st 2023</div>
+        <div>
+          <h2>Bangalore 🇮🇳</h2>
+          <div class="date">Jan 31st 2023</div>
+        </div>
         <div class="time">4:26:15 pm</div>
       </div>
     </div>
     <footer>
-      This project was coded by Bhaawna Shashi
+      This project was coded by <strong>Bhaawna Shashi</strong>
       <a href="https://github.com/bhaawnaBM/World-clock" target="_blank"
         >open sourced on GitHub</a
       >
