--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>World Clock - BS</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.40/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -17,19 +19,19 @@
         <option value="">Melbourne</option>
         <option value="">Dubai</option>
       </select>
-      <div class="city">
+      <div class="city" id="indianapolis">
         <div>
           <h2>Indianapolis 🇺🇸</h2>
-          <div class="date">Jan 31st 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">4:26:15 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="bangalore">
         <div>
           <h2>Bangalore 🇮🇳</h2>
-          <div class="date">Jan 31st 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">4:26:15 pm</div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
