--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="selectCity">
         <option value="">Select a City</option>
-        <option value="">Indianapolis</option>
-        <option value="">Bangalore</option>
-        <option value="">Melbourne</option>
-        <option value="">Dubai</option>
+        <option value="Asia/Kolkata">Bangalore</option>
+        <option value="Australia/Melbourne">Melbourne</option>
+        <option value="Asia/Dubai">Dubai</option>
+        <option value="America/Chicago">Chicago</option>
       </select>
-      <div class="city" id="indianapolis">
-        <div>
-          <h2>Indianapolis 🇺🇸</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="melbourne">
+          <div>
+            <h2>Melbourne 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="bangalore">
-        <div>
-          <h2>Bangalore 🇮🇳</h2>
-          <div class="date"></div>
+        <div class="city" id="bangalore">
+          <div>
+            <h2>Bangalore 🇮🇳</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
