updated the cities

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <option value="Australia/Melbourne">Melbourne</option>
         <option value="Asia/Dubai">Dubai</option>
         <option value="America/Chicago">Chicago</option>
+        <option value="America/New_York">New York</option>
       </select>
       <div id="cities">
-        <div class="city" id="melbourne">
+        <div class="city">
           <div>
             <h2>Melbourne 🇺🇸</h2>
             <div class="date"></div>
