updated to include local time

--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
       <select id="selectCity">
         <option value="">Select a City</option>
         <option value="Asia/Kolkata">Bangalore</option>
-        <option value="Australia/Melbourne">Melbourne</option>
+        <option value="current">My Location</option>
         <option value="Asia/Dubai">Dubai</option>
         <option value="America/Chicago">Chicago</option>
         <option value="America/New_York">New York</option>
       </select>
       <div id="cities">
-        <div class="city">
-          <div>
-            <h2>Melbourne 🇺🇸</h2>
-            <div class="date"></div>
-          </div>
-          <div class="time"></div>
-        </div>
         <div class="city" id="bangalore">
           <div>
             <h2>Bangalore 🇮🇳</h2>
