updated the cities

--- a/index.html
+++ b/index.html
@@ -14,20 +14,27 @@
       <h1>World Clock</h1>
       <select id="selectCity">
         <option value="">Select a City</option>
-        <option value="Asia/Kolkata">Bangalore</option>
         <option value="current">My Location</option>
         <option value="Asia/Dubai">Dubai</option>
         <option value="America/Chicago">Chicago</option>
         <option value="America/New_York">New York</option>
       </select>
       <div id="cities">
-        <div class="city" id="bangalore">
+        <div class="city" id="indianapolis">
           <div>
-            <h2>Bangalore 🇮🇳</h2>
+            <h2>Indianapolis 🇺🇸</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
         </div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo 🇯🇵</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <a href="#">All cities</a>
       </div>
     </div>
     <footer>
